--- a/PetSupportApp/View/Favourite.storyboard
+++ b/PetSupportApp/View/Favourite.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bfn-Hb-72O">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <rect key="frame" x="0.0" y="55" width="414" height="807"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShelterListTableViewCell" rowHeight="150" id="ayV-hS-LEW" customClass="ShelterListTableViewCell" customModule="PetSupportApp" customModuleProvider="target">
@@ -149,17 +149,56 @@
                                     <outlet property="delegate" destination="fqH-qO-pDg" id="AYX-9L-Iyr"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xfk-mD-nDp">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="euK-bs-0ap">
+                                        <rect key="frame" x="20" y="5" width="0.0" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="gk6-i1-ZMG"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mdr-DC-Uo9">
+                                        <rect key="frame" x="324" y="5" width="70" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="WUf-Ye-v1z"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="knB-1H-GAY"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <state key="normal" title="Select">
+                                            <color key="titleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Mdr-DC-Uo9" secondAttribute="trailing" constant="20" id="2G6-1j-fUd"/>
+                                    <constraint firstItem="Mdr-DC-Uo9" firstAttribute="centerY" secondItem="euK-bs-0ap" secondAttribute="centerY" id="ONs-c2-tpk"/>
+                                    <constraint firstItem="Mdr-DC-Uo9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="euK-bs-0ap" secondAttribute="trailing" constant="10" id="QKn-ak-f7I"/>
+                                    <constraint firstItem="euK-bs-0ap" firstAttribute="leading" secondItem="xfk-mD-nDp" secondAttribute="leading" constant="20" id="RTb-lC-LgJ"/>
+                                    <constraint firstAttribute="height" constant="50" id="qBA-P9-L55"/>
+                                    <constraint firstItem="euK-bs-0ap" firstAttribute="centerY" secondItem="xfk-mD-nDp" secondAttribute="centerY" id="wgn-Ge-AWS"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mLt-Dw-4nY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="xfk-mD-nDp" firstAttribute="leading" secondItem="Tlg-PR-38Z" secondAttribute="leading" id="2aD-fu-jSb"/>
                             <constraint firstAttribute="trailing" secondItem="Bfn-Hb-72O" secondAttribute="trailing" id="C7B-Ws-tGp"/>
+                            <constraint firstItem="Bfn-Hb-72O" firstAttribute="top" secondItem="xfk-mD-nDp" secondAttribute="bottom" constant="5" id="Du7-8C-e7V"/>
                             <constraint firstItem="Bfn-Hb-72O" firstAttribute="leading" secondItem="mLt-Dw-4nY" secondAttribute="leading" id="Vec-p6-EYg"/>
                             <constraint firstItem="mLt-Dw-4nY" firstAttribute="bottom" secondItem="Bfn-Hb-72O" secondAttribute="bottom" id="m5q-sj-pOW"/>
-                            <constraint firstItem="Bfn-Hb-72O" firstAttribute="top" secondItem="Tlg-PR-38Z" secondAttribute="top" id="xbz-xU-kpF"/>
+                            <constraint firstItem="xfk-mD-nDp" firstAttribute="top" secondItem="Tlg-PR-38Z" secondAttribute="top" id="sAd-Dh-5Od"/>
+                            <constraint firstItem="mLt-Dw-4nY" firstAttribute="trailing" secondItem="xfk-mD-nDp" secondAttribute="trailing" id="wNB-t8-rga"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="headerView" destination="xfk-mD-nDp" id="Tnt-wa-Sp8"/>
+                        <outlet property="lblTotalShelter" destination="euK-bs-0ap" id="fso-qc-Mye"/>
                         <outlet property="tblFavoriteShelter" destination="Bfn-Hb-72O" id="O8Q-a2-z8R"/>
                     </connections>
                 </viewController>
@@ -176,7 +215,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZFR-mA-syP">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="55" width="414" height="807"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PetListTableViewCell" rowHeight="250" id="0re-CG-C1O" customClass="PetListTableViewCell" customModule="PetSupportApp" customModuleProvider="target">
@@ -335,17 +374,56 @@
                                     <outlet property="delegate" destination="klG-pR-54m" id="lmv-ge-Bqx"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AIU-FX-kjp">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NZa-eH-UVE">
+                                        <rect key="frame" x="20" y="5" width="0.0" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="LCJ-xa-CbX"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fbJ-n7-hL0">
+                                        <rect key="frame" x="324" y="5" width="70" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="5ja-JQ-idS"/>
+                                            <constraint firstAttribute="height" constant="40" id="gs7-j3-UPi"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <state key="normal" title="Select">
+                                            <color key="titleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="fbJ-n7-hL0" secondAttribute="trailing" constant="20" id="G0M-nT-tsi"/>
+                                    <constraint firstItem="NZa-eH-UVE" firstAttribute="centerY" secondItem="AIU-FX-kjp" secondAttribute="centerY" id="Lbr-F4-dyA"/>
+                                    <constraint firstItem="NZa-eH-UVE" firstAttribute="leading" secondItem="AIU-FX-kjp" secondAttribute="leading" constant="20" id="Vji-0V-q0E"/>
+                                    <constraint firstAttribute="height" constant="50" id="ZWE-wF-2xF"/>
+                                    <constraint firstItem="fbJ-n7-hL0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NZa-eH-UVE" secondAttribute="trailing" constant="10" id="yv3-ru-E0C"/>
+                                    <constraint firstItem="fbJ-n7-hL0" firstAttribute="centerY" secondItem="NZa-eH-UVE" secondAttribute="centerY" id="zL6-9c-aaT"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="acw-Lz-L0d"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="acw-Lz-L0d" firstAttribute="bottom" secondItem="ZFR-mA-syP" secondAttribute="bottom" id="EPy-cm-NR5"/>
-                            <constraint firstItem="ZFR-mA-syP" firstAttribute="top" secondItem="acw-Lz-L0d" secondAttribute="top" id="EgL-ZI-17s"/>
+                            <constraint firstItem="ZFR-mA-syP" firstAttribute="top" secondItem="AIU-FX-kjp" secondAttribute="bottom" constant="5" id="O8f-UO-Qn6"/>
+                            <constraint firstItem="AIU-FX-kjp" firstAttribute="leading" secondItem="acw-Lz-L0d" secondAttribute="leading" id="Ovc-pL-XOc"/>
                             <constraint firstItem="ZFR-mA-syP" firstAttribute="leading" secondItem="acw-Lz-L0d" secondAttribute="leading" id="rIs-vF-rF3"/>
                             <constraint firstItem="acw-Lz-L0d" firstAttribute="trailing" secondItem="ZFR-mA-syP" secondAttribute="trailing" id="w0E-4T-cp2"/>
+                            <constraint firstAttribute="trailing" secondItem="AIU-FX-kjp" secondAttribute="trailing" id="yEy-uh-OlY"/>
+                            <constraint firstItem="AIU-FX-kjp" firstAttribute="top" secondItem="ULN-2J-ygQ" secondAttribute="top" id="zuL-Ik-rTu"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="headerView" destination="AIU-FX-kjp" id="wc8-Zj-AAK"/>
+                        <outlet property="lblTotalPets" destination="NZa-eH-UVE" id="Vnv-ds-fcQ"/>
                         <outlet property="tblFavoritePet" destination="ZFR-mA-syP" id="DOS-Vc-crh"/>
                     </connections>
                 </viewController>
