--- a/PetSupportApp/View/Base.lproj/Main.storyboard
+++ b/PetSupportApp/View/Base.lproj/Main.storyboard
@@ -23,6 +23,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E00-sT-Y4h">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorites" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="me0-ug-vMb">
+                                        <rect key="frame" x="20" y="50" width="374" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="kUi-Kp-x3x"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="me0-ug-vMb" secondAttribute="bottom" id="S2O-an-MGz"/>
+                                    <constraint firstItem="me0-ug-vMb" firstAttribute="leading" secondItem="E00-sT-Y4h" secondAttribute="leading" constant="20" id="TT4-lV-fom"/>
+                                    <constraint firstAttribute="height" constant="80" id="Vr0-H0-NcP"/>
+                                    <constraint firstAttribute="trailing" secondItem="me0-ug-vMb" secondAttribute="trailing" constant="20" id="xGb-zv-LKP"/>
+                                </constraints>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="G95-UP-Bdv">
                                 <rect key="frame" x="107" y="90" width="200" height="50"/>
                                 <subviews>
@@ -98,49 +119,37 @@
                                     <constraint firstAttribute="width" constant="200" id="qhM-nO-LGz"/>
                                 </constraints>
                             </stackView>
+                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A42-kT-LMi">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XLI-ZM-1R7">
                                 <rect key="frame" x="0.0" y="140" width="414" height="746"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E00-sT-Y4h">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorites" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="me0-ug-vMb">
-                                        <rect key="frame" x="20" y="50" width="374" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="kUi-Kp-x3x"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="me0-ug-vMb" secondAttribute="bottom" id="S2O-an-MGz"/>
-                                    <constraint firstItem="me0-ug-vMb" firstAttribute="leading" secondItem="E00-sT-Y4h" secondAttribute="leading" constant="20" id="TT4-lV-fom"/>
-                                    <constraint firstAttribute="height" constant="80" id="Vr0-H0-NcP"/>
-                                    <constraint firstAttribute="trailing" secondItem="me0-ug-vMb" secondAttribute="trailing" constant="20" id="xGb-zv-LKP"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="d4r-fe-zNP"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="XLI-ZM-1R7" secondAttribute="trailing" id="0wk-ek-i3D"/>
+                            <constraint firstItem="XLI-ZM-1R7" firstAttribute="top" secondItem="A42-kT-LMi" secondAttribute="bottom" id="CE3-og-hJc"/>
+                            <constraint firstAttribute="top" secondItem="A42-kT-LMi" secondAttribute="top" id="MJp-Cj-yqj"/>
                             <constraint firstItem="XLI-ZM-1R7" firstAttribute="top" secondItem="G95-UP-Bdv" secondAttribute="bottom" id="VKV-fo-OLb"/>
                             <constraint firstItem="E00-sT-Y4h" firstAttribute="top" secondItem="ft7-Fr-P1P" secondAttribute="top" id="YN0-dh-w4V"/>
                             <constraint firstItem="G95-UP-Bdv" firstAttribute="top" secondItem="E00-sT-Y4h" secondAttribute="bottom" constant="10" id="fJc-b9-6BK"/>
+                            <constraint firstItem="d4r-fe-zNP" firstAttribute="trailing" secondItem="A42-kT-LMi" secondAttribute="trailing" id="flp-1A-Gg2"/>
                             <constraint firstItem="E00-sT-Y4h" firstAttribute="leading" secondItem="d4r-fe-zNP" secondAttribute="leading" id="idY-Mz-9Ug"/>
                             <constraint firstAttribute="bottom" secondItem="XLI-ZM-1R7" secondAttribute="bottom" constant="10" id="oC7-qA-eq4"/>
                             <constraint firstItem="d4r-fe-zNP" firstAttribute="trailing" secondItem="E00-sT-Y4h" secondAttribute="trailing" id="suu-Iy-fdX"/>
                             <constraint firstItem="XLI-ZM-1R7" firstAttribute="leading" secondItem="d4r-fe-zNP" secondAttribute="leading" id="uAt-tV-M7B"/>
                             <constraint firstItem="G95-UP-Bdv" firstAttribute="centerX" secondItem="ft7-Fr-P1P" secondAttribute="centerX" id="xPA-Rc-eT8"/>
+                            <constraint firstItem="A42-kT-LMi" firstAttribute="leading" secondItem="d4r-fe-zNP" secondAttribute="leading" id="yQK-Sb-4bH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eyz-pi-ClY"/>
                     <connections>
                         <outlet property="colView" destination="Sir-G0-Nhv" id="wd7-eQ-6gj"/>
+                        <outlet property="fadeView" destination="A42-kT-LMi" id="5tw-Tz-M7U"/>
                         <outlet property="vwPageContainer" destination="XLI-ZM-1R7" id="yFr-25-dfT"/>
                     </connections>
                 </viewController>
@@ -714,6 +723,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eqf-8T-Teq">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Schedules" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wM9-GN-GEr">
+                                        <rect key="frame" x="20" y="50" width="374" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="HEG-9x-IAp"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="wM9-GN-GEr" secondAttribute="trailing" constant="20" id="1SY-ym-qSE"/>
+                                    <constraint firstAttribute="height" constant="80" id="72y-v0-2Rc"/>
+                                    <constraint firstItem="wM9-GN-GEr" firstAttribute="leading" secondItem="eqf-8T-Teq" secondAttribute="leading" constant="20" id="BeY-6P-6Oz"/>
+                                    <constraint firstAttribute="bottom" secondItem="wM9-GN-GEr" secondAttribute="bottom" id="kUi-LP-TSa"/>
+                                </constraints>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="exg-4z-ey8">
                                 <rect key="frame" x="107" y="90" width="200" height="50"/>
                                 <subviews>
@@ -789,40 +819,27 @@
                                     <constraint firstAttribute="height" constant="50" id="eVY-LF-GD7"/>
                                 </constraints>
                             </stackView>
+                            <view alpha="0.30000001192092896" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rM0-dd-wiN">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vmp-w8-lzg">
                                 <rect key="frame" x="0.0" y="140" width="414" height="746"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eqf-8T-Teq">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Schedules" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wM9-GN-GEr">
-                                        <rect key="frame" x="20" y="50" width="374" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="HEG-9x-IAp"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="wM9-GN-GEr" secondAttribute="trailing" constant="20" id="1SY-ym-qSE"/>
-                                    <constraint firstAttribute="height" constant="80" id="72y-v0-2Rc"/>
-                                    <constraint firstItem="wM9-GN-GEr" firstAttribute="leading" secondItem="eqf-8T-Teq" secondAttribute="leading" constant="20" id="BeY-6P-6Oz"/>
-                                    <constraint firstAttribute="bottom" secondItem="wM9-GN-GEr" secondAttribute="bottom" id="kUi-LP-TSa"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="5wG-iO-TBl"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="eqf-8T-Teq" firstAttribute="leading" secondItem="5wG-iO-TBl" secondAttribute="leading" id="78m-bU-Xqs"/>
+                            <constraint firstItem="vmp-w8-lzg" firstAttribute="top" secondItem="rM0-dd-wiN" secondAttribute="bottom" id="K6o-ws-K4r"/>
                             <constraint firstItem="exg-4z-ey8" firstAttribute="top" secondItem="eqf-8T-Teq" secondAttribute="bottom" constant="10" id="L8X-Sc-tqz"/>
+                            <constraint firstItem="5wG-iO-TBl" firstAttribute="trailing" secondItem="rM0-dd-wiN" secondAttribute="trailing" id="Nay-68-Dda"/>
+                            <constraint firstItem="rM0-dd-wiN" firstAttribute="leading" secondItem="5wG-iO-TBl" secondAttribute="leading" id="VVp-NO-tKS"/>
                             <constraint firstAttribute="bottom" secondItem="vmp-w8-lzg" secondAttribute="bottom" constant="10" id="VZZ-Hb-aVm"/>
                             <constraint firstItem="vmp-w8-lzg" firstAttribute="leading" secondItem="5wG-iO-TBl" secondAttribute="leading" id="YHi-xR-739"/>
                             <constraint firstItem="5wG-iO-TBl" firstAttribute="trailing" secondItem="eqf-8T-Teq" secondAttribute="trailing" id="aNt-1M-7qk"/>
+                            <constraint firstAttribute="top" secondItem="rM0-dd-wiN" secondAttribute="top" id="bbl-7S-HZj"/>
                             <constraint firstItem="eqf-8T-Teq" firstAttribute="top" secondItem="IC6-LL-0gn" secondAttribute="top" id="gb4-33-zaL"/>
                             <constraint firstItem="exg-4z-ey8" firstAttribute="centerX" secondItem="IC6-LL-0gn" secondAttribute="centerX" id="pQa-ac-aU4"/>
                             <constraint firstAttribute="trailing" secondItem="vmp-w8-lzg" secondAttribute="trailing" id="vPv-Fo-9h4"/>
@@ -832,6 +849,7 @@
                     <navigationItem key="navigationItem" id="QVQ-dQ-Neo"/>
                     <connections>
                         <outlet property="colView" destination="RDe-zk-kKl" id="nPv-VS-DRG"/>
+                        <outlet property="fadeView" destination="rM0-dd-wiN" id="5RW-88-q4G"/>
                         <outlet property="vwPageContainer" destination="vmp-w8-lzg" id="gKy-1x-SqN"/>
                     </connections>
                 </viewController>
