--- a/PetSupportApp/View/Favourite.storyboard
+++ b/PetSupportApp/View/Favourite.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -61,7 +61,7 @@
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShelterListTableViewCell" rowHeight="150" id="ayV-hS-LEW" customClass="ShelterListTableViewCell" customModule="PetSupportApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="74.5" width="414" height="150"/>
+                                        <rect key="frame" x="0.0" y="78" width="414" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ayV-hS-LEW" id="5Uf-QU-laI">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
@@ -124,7 +124,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NoItemTableViewCell" rowHeight="60" id="ig8-bZ-yFn" customClass="NoItemTableViewCell" customModule="PetSupportApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="224.5" width="414" height="60"/>
+                                        <rect key="frame" x="0.0" y="228" width="414" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ig8-bZ-yFn" id="LOS-C1-9Pj">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
@@ -252,7 +252,7 @@
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PetListTableViewCell" rowHeight="250" id="0re-CG-C1O" customClass="PetListTableViewCell" customModule="PetSupportApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="74.5" width="414" height="250"/>
+                                        <rect key="frame" x="0.0" y="78" width="414" height="250"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0re-CG-C1O" id="VLM-r6-O7B">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
@@ -347,7 +347,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NoItemTableViewCell" rowHeight="60" id="2yR-37-gBh" customClass="NoItemTableViewCell" customModule="PetSupportApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="324.5" width="414" height="60"/>
+                                        <rect key="frame" x="0.0" y="328" width="414" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2yR-37-gBh" id="xSG-nm-zIR">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
@@ -810,6 +810,7 @@
                     <navigationItem key="navigationItem" id="5TE-Yw-XMC"/>
                     <connections>
                         <outlet property="btnClose" destination="0Hm-8X-Ula" id="3gR-gx-Ewe"/>
+                        <outlet property="intoduceText" destination="R9c-w2-ZXu" id="7GP-nK-iE3"/>
                         <outlet property="lblPetName" destination="zUA-5m-xxV" id="uyE-SW-YCh"/>
                         <outlet property="mainView" destination="jIX-cW-1Km" id="I85-M5-em2"/>
                     </connections>
