--- a/PetSupportApp/View/Home.storyboard
+++ b/PetSupportApp/View/Home.storyboard
@@ -12,6 +12,7 @@
     <customFonts key="customFonts">
         <array key="HelveticaNeue.ttc">
             <string>HelveticaNeue</string>
+            <string>HelveticaNeue-Bold</string>
         </array>
     </customFonts>
     <scenes>
@@ -117,11 +118,12 @@
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZL0-te-kWz">
                                                                 <rect key="frame" x="274" y="315" width="60" height="60"/>
                                                                 <subviews>
-                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favorite" translatesAutoresizingMaskIntoConstraints="NO" id="TQK-la-zsq">
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TQK-la-zsq">
                                                                         <rect key="frame" x="15" y="15" width="30" height="30"/>
                                                                     </imageView>
-                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9z3-qy-sJS">
+                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9z3-qy-sJS">
                                                                         <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                                        <state key="normal" image="like"/>
                                                                         <connections>
                                                                             <action selector="favoriteButtonAction:" destination="HMx-6i-ws5" eventType="touchUpInside" id="TzU-Dx-HVs"/>
                                                                         </connections>
@@ -715,12 +717,16 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jmh-Vl-p8D">
                                                         <rect key="frame" x="344" y="5" width="60" height="60"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favorite" translatesAutoresizingMaskIntoConstraints="NO" id="DHa-PA-3NG">
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DHa-PA-3NG">
                                                                 <rect key="frame" x="15" y="15" width="30" height="30"/>
                                                             </imageView>
-                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yz5-Fe-dvJ">
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yz5-Fe-dvJ">
                                                                 <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <state key="normal" image="like"/>
+                                                                <connections>
+                                                                    <action selector="shelterFavBtnAction:" destination="HMx-6i-ws5" eventType="touchUpInside" id="pms-Ot-LAW"/>
+                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                         <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
@@ -988,9 +994,11 @@
                         <outlet property="lblSpayed" destination="2qU-n9-LYs" id="1Oc-K6-uj1"/>
                         <outlet property="lblVaccination" destination="2qU-n9-LYs" id="6zS-R9-glq"/>
                         <outlet property="pageControl" destination="h0c-uJ-khB" id="p1Q-zW-i3Y"/>
+                        <outlet property="petLikeBtn" destination="9z3-qy-sJS" id="wfd-87-rOY"/>
                         <outlet property="petProfileImageView" destination="f28-kJ-t6G" id="OgQ-MT-ncI"/>
                         <outlet property="shelterFavBtnContainerView" destination="jmh-Vl-p8D" id="KdM-6q-8UB"/>
                         <outlet property="shelterImageView" destination="ZIN-pX-ob6" id="0Yr-OT-4it"/>
+                        <outlet property="shelterLikeBtn" destination="Yz5-Fe-dvJ" id="coa-IJ-WFa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bia-Cn-0ay" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1034,13 +1042,14 @@
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mZM-Zd-HEr">
                                                                 <rect key="frame" x="274" y="315" width="60" height="60"/>
                                                                 <subviews>
-                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favorite" translatesAutoresizingMaskIntoConstraints="NO" id="sYX-fO-z7t">
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sYX-fO-z7t">
                                                                         <rect key="frame" x="15" y="15" width="30" height="30"/>
                                                                     </imageView>
-                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RSl-qo-hFE">
+                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RSl-qo-hFE">
                                                                         <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                                        <state key="normal" image="like"/>
                                                                         <connections>
-                                                                            <action selector="favoriteButtonAction:" destination="aIR-cf-z9R" eventType="touchUpInside" id="ZAP-9c-R4U"/>
+                                                                            <action selector="favoriteButtonAction:" destination="aIR-cf-z9R" eventType="touchUpInside" id="fsp-Vr-mKc"/>
                                                                         </connections>
                                                                     </button>
                                                                 </subviews>
@@ -1172,38 +1181,11 @@
                                                             <constraint firstItem="1bK-bi-guH" firstAttribute="top" secondItem="1U7-1l-nn1" secondAttribute="top" constant="1" id="t4C-q9-5JM"/>
                                                         </constraints>
                                                     </view>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rOy-fo-dVO">
-                                                        <rect key="frame" x="344" y="5" width="60" height="60"/>
-                                                        <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favorite" translatesAutoresizingMaskIntoConstraints="NO" id="Gqa-ZF-YKr">
-                                                                <rect key="frame" x="15" y="15" width="30" height="30"/>
-                                                            </imageView>
-                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AzB-Im-gA3">
-                                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            </button>
-                                                        </subviews>
-                                                        <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <constraints>
-                                                            <constraint firstItem="Gqa-ZF-YKr" firstAttribute="leading" secondItem="rOy-fo-dVO" secondAttribute="leading" constant="15" id="4Zs-ZY-kXh"/>
-                                                            <constraint firstAttribute="width" constant="60" id="8Qd-os-wK8"/>
-                                                            <constraint firstAttribute="trailing" secondItem="Gqa-ZF-YKr" secondAttribute="trailing" constant="15" id="8xX-cd-ULq"/>
-                                                            <constraint firstItem="AzB-Im-gA3" firstAttribute="top" secondItem="rOy-fo-dVO" secondAttribute="top" id="FJU-HI-aWR"/>
-                                                            <constraint firstItem="Gqa-ZF-YKr" firstAttribute="top" secondItem="rOy-fo-dVO" secondAttribute="top" constant="15" id="IDu-iE-rtq"/>
-                                                            <constraint firstItem="AzB-Im-gA3" firstAttribute="leading" secondItem="rOy-fo-dVO" secondAttribute="leading" id="Tgp-QM-V2h"/>
-                                                            <constraint firstAttribute="height" constant="60" id="fAf-7E-k6f"/>
-                                                            <constraint firstAttribute="bottom" secondItem="Gqa-ZF-YKr" secondAttribute="bottom" constant="15" id="fz4-Zu-f3x"/>
-                                                            <constraint firstAttribute="trailing" secondItem="AzB-Im-gA3" secondAttribute="trailing" id="xgo-91-frc"/>
-                                                            <constraint firstAttribute="bottom" secondItem="AzB-Im-gA3" secondAttribute="bottom" id="zLj-mT-K6H"/>
-                                                        </constraints>
-                                                    </view>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstItem="rOy-fo-dVO" firstAttribute="centerY" secondItem="mRm-Ue-a2r" secondAttribute="centerY" id="64P-VC-HML"/>
                                                     <constraint firstItem="6hQ-hW-5h5" firstAttribute="centerX" secondItem="mRm-Ue-a2r" secondAttribute="centerX" id="9aZ-qV-jVz"/>
                                                     <constraint firstAttribute="height" constant="70" id="CeB-0R-o9u"/>
-                                                    <constraint firstAttribute="trailing" secondItem="rOy-fo-dVO" secondAttribute="trailing" constant="10" id="FdY-fl-LVO"/>
                                                     <constraint firstItem="1U7-1l-nn1" firstAttribute="centerX" secondItem="mRm-Ue-a2r" secondAttribute="centerX" id="OsH-S2-COP"/>
                                                     <constraint firstItem="6hQ-hW-5h5" firstAttribute="leading" secondItem="mRm-Ue-a2r" secondAttribute="leading" constant="10" id="RfU-xh-sUF"/>
                                                     <constraint firstAttribute="trailing" secondItem="6hQ-hW-5h5" secondAttribute="trailing" constant="10" id="k9u-du-ufM"/>
@@ -1596,8 +1578,9 @@
                         <outlet property="lblShelterDescription" destination="z6i-QD-mPu" id="al1-ER-iFb"/>
                         <outlet property="lblShelterName" destination="wI5-7Z-JWL" id="Hnn-Vc-eLr"/>
                         <outlet property="lblShelterSub" destination="xEv-KN-9Wz" id="7vp-Up-a7g"/>
-                        <outlet property="shelterFavBtnContainerView" destination="rOy-fo-dVO" id="hrq-xW-t6G"/>
+                        <outlet property="shelterFavBtnContainerView" destination="RSl-qo-hFE" id="dlH-jJ-85y"/>
                         <outlet property="shelterImageView" destination="1bK-bi-guH" id="xVJ-OW-WCe"/>
+                        <outlet property="shelterLikeBtn" destination="RSl-qo-hFE" id="WKA-Nk-v4N"/>
                         <outlet property="shelterTopImageView" destination="DnO-Xd-pau" id="ktt-cy-diq"/>
                         <outlet property="sheltetPetCollectionView" destination="4rw-ID-97U" id="beC-gF-v6B"/>
                     </connections>
@@ -1675,7 +1658,7 @@
                                                             <constraint firstAttribute="width" constant="30" id="00Y-Kc-csY"/>
                                                             <constraint firstAttribute="height" constant="30" id="A1T-XM-0lB"/>
                                                         </constraints>
-                                                        <state key="normal" image="favorite"/>
+                                                        <state key="normal" image="like"/>
                                                         <connections>
                                                             <action selector="favoriteButtonAction:" destination="KMy-8g-CtF" eventType="touchUpInside" id="4uj-83-mYm"/>
                                                         </connections>
@@ -5133,9 +5116,9 @@
         <image name="close" width="13" height="13"/>
         <image name="diamondinruff" width="154" height="117"/>
         <image name="email" width="40" height="40"/>
-        <image name="favorite" width="21" height="21"/>
         <image name="filter" width="21" height="21"/>
         <image name="home" width="21" height="21"/>
+        <image name="like" width="88" height="88"/>
         <image name="location" width="40" height="40"/>
         <image name="option" width="40" height="40"/>
         <image name="phone" width="40" height="40"/>
